# log-extractor

./: README.md  pyproject.toml
data/: .gitignore  Makefile
src/log_extractor/: cli.py
