[project]
name = "log-extractor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chenyao36", email = "chen.yao.36@outlook.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
cli = "log_extractor:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/log_extractor"]
